Fixed navbar item width on smaller screens

--- a/style1.css
+++ b/style1.css
@@ -72,7 +72,7 @@ footer{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width: 19.5%;
+    width: 18.5%;
     font-size: 1.25em;
 }
 .tb_a:hover{
